<?xml version="1.0"?>
<package format="3">
  <name>autoware_external_msgs</name>
  <version>1.14.0</version>
  <description>Package to contain an install external message dependencies</description>

  <author email="abrahammonrroy@yahoo.com">Abraham Monrroy</author>
  <maintainer email="abrahammonrroy@yahoo.com">Abraham Monrroy</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>lgsvl_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

