<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vector_map_msgs</name>
  <version>1.14.0</version>
  <description>The vector_map_msgs package</description>
  <maintainer email="syouji@axe.bz">syouji</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
